--- a/views/lancamentos.ejs
+++ b/views/lancamentos.ejs
@@ -51,7 +51,8 @@
         </div>
 
         <div id="header-2">
-            <h1>Filmes e Séries Lançados em <%= Ano %></h1>
+            <h1>Filmes e Séries Lançados em <%= Ano %>
+            </h1>
             <h1>Conheça meu catálogo de Filmes e Séries</h1>
             <p>Arraste o cursor sobre o poster para mais informações. </p>
         </div>
@@ -73,7 +74,8 @@
         <% for(let i=0; i < allLancamentos.length; i++) { %>
 
             <div class="filmes">
-                <% let parametro; if (allLancamentos[i].title !=null) { parametro='movie' ; } else { parametro='tv' ; } %>
+                <% let parametro; if (allLancamentos[i].title !=null) { parametro='movie' ; } else { parametro='tv' ; }
+                    %>
 
                     <section class="link-info-filme">
 
@@ -81,31 +83,17 @@
                             <img class="img-filmes"
                                 src="https://image.tmdb.org/t/p/w500/<%= allLancamentos[i].poster_path %>"
                                 alt="<%= allLancamentos[i].title %> <%= allLancamentos[i].name %>">
-
-                            <div class="info-filme">
-                                <p>
-                                    <%= allLancamentos[i].title %>
-                                    <%= allLancamentos[i].name %>
-                                </p>
-                                <p>
-
-                                    <%= allLancamentos[i].release_date %>
-                                    <%= allLancamentos[i].first_air_date %>
-
-                                </p>
-                                <p>
-                                    <% let alLancamentos=[]; for(let j=0; j < allLancamentos[i].genre_ids.length; j++){
-                                        alLancamentos.push(idsGeneros.get(allLancamentos[i].genre_ids[j])) } %>
-                                        <%= alLancamentos.join(' - ') %>
-                                </p>
-                            </div>
                         </a>
 
-                </section>
-                <p class="nome-filme">
+                    </section>
+                    <p class="nome-filme">
                         <%= allLancamentos[i].title %>
-                        <%= allLancamentos[i].name %>
-                </p>
+                            <%= allLancamentos[i].name %>
+                    </p>
+                    <p class="data-filme">
+                        <%= allLancamentos[i].release_date %>
+                            <%= allLancamentos[i].first_air_date %>
+                    </p>
             </div>
             <% } %>
 
@@ -127,22 +115,22 @@
     <footer>
         <div id="footer2"></div>
 
-            <div id="footer2-icons">
-                <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
-                        src="/img/social/github.png" alt="Github"></a>
-                <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
-                        src="/img/social/instagram.png" alt="Instagram"></a>
-                <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img
-                        class="footer2-icon" src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
-                        src="/img/social/youtube.png" alt="Youtube"></a>
-                <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
-                        class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
-                <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
-                        src="/img/social/x.png" alt="X"></a>
-                <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
-                        src="/img/social/discordi.png" alt="Discord"></a>
-            </div>
+        <div id="footer2-icons">
+            <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
+                    src="/img/social/github.png" alt="Github"></a>
+            <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
+                    src="/img/social/instagram.png" alt="Instagram"></a>
+            <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img class="footer2-icon"
+                    src="/img/social/linkedin.png" alt="Linkedin"></a>
+            <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
+                    src="/img/social/youtube.png" alt="Youtube"></a>
+            <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
+                    class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
+            <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
+                    src="/img/social/x.png" alt="X"></a>
+            <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
+                    src="/img/social/discordi.png" alt="Discord"></a>
+        </div>
 
         </div>
         <div id="footer3">
