--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,8 +354,13 @@ main {
 .img-filmes {
     max-width: 100%;
     border-radius: 1em;
-    transition: filter 0.2s ease-in, transform 0.2s ease-in, opacity 0.2s ease-in;
+    transition: transform 0.2s ease-in, border 0.2s ease-in;
     display: flex;
+}
+
+.img-filmes:hover{
+    transform: scale(1.05);
+    border: 2px solid #ffffff;
 }
 
 .link-info-filme {
@@ -376,39 +381,13 @@ main {
     font-weight: bold;
 }
 
-.info-filme {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out, border 0.2s ease-in;
-    color: #ffffff;
-}
-
-.link-info:hover .info-filme {
-    opacity: 1;
-    border: 1px solid #ffffff;
-    background-color: #00000059;
-    border-radius: 1em;
-}
-
-.info-filme p {
-    font-size: 1em;
-    margin: 5px 0;
-}
-
-.link-info:hover .img-filmes {
-    opacity: 0.5;
-    filter: blur(5px);
-}
-
 .nome-filme {
+    font-size: 0.8em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.data-filme{
     font-size: 0.8em;
     font-weight: bold;
     text-align: center;
