--- a/views/populares.ejs
+++ b/views/populares.ejs
@@ -81,31 +81,17 @@
                             <img class="img-filmes"
                                 src="https://image.tmdb.org/t/p/w500/<%= allPopular[i].poster_path %>"
                                 alt="<%= allPopular[i].title %> <%= allPopular[i].name %>">
-
-                            <div class="info-filme">
-                                <p>
-                                    <%= allPopular[i].title %>
-                                    <%= allPopular[i].name %>
-                                </p>
-                                <p>
-
-                                    <%= allPopular[i].release_date %>
-                                    <%= allPopular[i].first_air_date %>
-
-                                </p>
-                                <p>
-                                    <% let alPopular=[]; for(let j=0; j < allPopular[i].genre_ids.length; j++){
-                                        alPopular.push(idsGeneros.get(allPopular[i].genre_ids[j])) } %>
-                                        <%= alPopular.join(' - ') %>
-                                </p>
-                            </div>
                         </a>
 
-                </section>
-                <p class="nome-filme">
+                    </section>
+                    <p class="nome-filme">
                         <%= allPopular[i].title %>
-                        <%= allPopular[i].name %>
-                </p>
+                            <%= allPopular[i].name %>
+                    </p>
+                    <p class="data-filme">
+                        <%= allPopular[i].release_date %>
+                            <%= allPopular[i].first_air_date %>
+                    </p>
             </div>
             <% } %>
 
@@ -127,22 +113,22 @@
     <footer>
         <div id="footer2"></div>
 
-            <div id="footer2-icons">
-                <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
-                        src="/img/social/github.png" alt="Github"></a>
-                <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
-                        src="/img/social/instagram.png" alt="Instagram"></a>
-                <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img
-                        class="footer2-icon" src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
-                        src="/img/social/youtube.png" alt="Youtube"></a>
-                <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
-                        class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
-                <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
-                        src="/img/social/x.png" alt="X"></a>
-                <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
-                        src="/img/social/discordi.png" alt="Discord"></a>
-            </div>
+        <div id="footer2-icons">
+            <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
+                    src="/img/social/github.png" alt="Github"></a>
+            <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
+                    src="/img/social/instagram.png" alt="Instagram"></a>
+            <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img class="footer2-icon"
+                    src="/img/social/linkedin.png" alt="Linkedin"></a>
+            <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
+                    src="/img/social/youtube.png" alt="Youtube"></a>
+            <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
+                    class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
+            <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
+                    src="/img/social/x.png" alt="X"></a>
+            <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
+                    src="/img/social/discordi.png" alt="Discord"></a>
+        </div>
 
         </div>
         <div id="footer3">
