:bug: alteração social

--- a/views/erro.ejs
+++ b/views/erro.ejs
@@ -43,7 +43,7 @@
                         src="/img/social/instagram.png" alt="Instagram"></a>
                 <a target="_blank" rel="noopener" class="social-header" href=""><img class="social-img"
                         src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" class="social-header" href="https://github.com/devsamuca"><img
+                <a target="_blank" rel="noopener" class="social-header" href="https://github.com/devsamuelsouza"><img
                         class="social-img" src="/img/social/github.png" alt="Github"></a>
             </div>
 
