--- a/views/lancamentos.ejs
+++ b/views/lancamentos.ejs
@@ -44,7 +44,7 @@
                 <a target="_blank" rel="noopener" class="social-header"
                     href="https://www.linkedin.com/in/devsamuel/overlay/about-this-profile/"><img class="social-img"
                         src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" class="social-header" href="https://github.com/devsamuca"><img
+                <a target="_blank" rel="noopener" class="social-header" href="https://github.com/devsamuelsouza"><img
                         class="social-img" src="/img/social/github.png" alt="Github"></a>
             </div>
 
